Quick file path fix for deploy